Bug fixes and favicon
Fixed table ffs....
Added Favicon :)

--- a/index.html
+++ b/index.html
@@ -1,164 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>CruiseCount</title>
-		<link rel="stylesheet" href="./css/style.css">
-		<script src="./js/script.js"></script>
-		<script src="https://kit.fontawesome.com/a2c15d1ebf.js" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		<section>
-			</br></br></br></br>
-			<h1>CruiseCount</h1>
-			<a class="Login" href="login.html"><i class="fa-solid fa-user"></i> Login</a>
-			<a class="addContent" href="addCar.html"><i class="fa-sharp fa-solid fa-plus"></i> Add</a>
-			</br></br></br></br>
-			<div class="tbl-header">
-				<table>
-					<thead>
-						<tr>
-							<th>Date</th>
-							<th>Make</th>
-							<th>Model</th>
-							<th>Reg Number</th>
-							<th>Mot Status</th>
-							<th>Fuel Type</th>
-							<th>Year of Manufacture</th>
-							<th>Colour</th>
-							<th>User</th>
-						</tr>
-					</thead>
-				</table>
-			</div>
-			<div class="tbl-content">
-				<table>
-					<tbody>
-						<tr>
-							<td>2023-08-11</td>
-							<td>Toyota</td>
-							<td>Camry</td>
-							<td>ABC123</td>
-							<td>Valid</td>
-							<td>Petrol</td>
-							<td>2022</td>
-							<td>Blue</td>
-							<td>Alex</td>
-						</tr>
-						<tr>
-							<td>2023-08-10</td>
-							<td>Honda</td>
-							<td>Accord</td>
-							<td>XYZ789</td>
-							<td>Expired</td>
-							<td>Diesel</td>
-							<td>2021</td>
-							<td>Red</td>
-							<td>James</td>
-						</tr>
-						<tr>
-							<td>2023-08-09</td>
-							<td>Ford</td>
-							<td>Mustang</td>
-							<td>DEF456</td>
-							<td>Valid</td>
-							<td>Petrol</td>
-							<td>2023</td>
-							<td>Black</td>
-							<td>David</td>
-						</tr>
-						<tr>
-							<td>2023-08-08</td>
-							<td>Chevrolet</td>
-							<td>Impala</td>
-							<td>GHI789</td>
-							<td>Valid</td>
-							<td>Petrol</td>
-							<td>2022</td>
-							<td>Silver</td>
-							<td>Emily</td>
-						</tr>
-						<tr>
-							<td>2023-08-07</td>
-							<td>BMW</td>
-							<td>X5</td>
-							<td>JKL234</td>
-							<td>Expired</td>
-							<td>Diesel</td>
-							<td>2020</td>
-							<td>White</td>
-							<td>Michael</td>
-						</tr>
-						<tr>
-							<td>2023-08-06</td>
-							<td>Audi</td>
-							<td>A4</td>
-							<td>MNO567</td>
-							<td>Valid</td>
-							<td>Gasoline</td>
-							<td>2023</td>
-							<td>Gray</td>
-							<td>Sophia</td>
-						</tr>
-						<tr>
-							<td>2023-08-05</td>
-							<td>Nissan</td>
-							<td>Maxima</td>
-							<td>PQR890</td>
-							<td>Valid</td>
-							<td>Petrol</td>
-							<td>2023</td>
-							<td>Black</td>
-							<td>William</td>
-						</tr>
-						<tr>
-							<td>2023-08-04</td>
-							<td>Toyota</td>
-							<td>Rav4</td>
-							<td>STU123</td>
-							<td>Expired</td>
-							<td>Hybrid</td>
-							<td>2022</td>
-							<td>Green</td>
-							<td>Olivia</td>
-						</tr>
-						<tr>
-							<td>2023-08-03</td>
-							<td>Hyundai</td>
-							<td>Sonata</td>
-							<td>VWX456</td>
-							<td>Valid</td>
-							<td>Petrol</td>
-							<td>2022</td>
-							<td>White</td>
-							<td>Ethan</td>
-						</tr>
-						<tr>
-							<td>2023-08-02</td>
-							<td>Mercedes-Benz</td>
-							<td>C-Class</td>
-							<td>YZA789</td>
-							<td>Expired</td>
-							<td>Diesel</td>
-							<td>2021</td>
-							<td>Blue</td>
-							<td>Isabella</td>
-						</tr>
-						<tr>
-							<td>2023-08-01</td>
-							<td>Ford</td>
-							<td>F-150</td>
-							<td>BCD234</td>
-							<td>Valid</td>
-							<td>Petrol</td>
-							<td>2023</td>
-							<td>Red</td>
-							<td>Noah</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</section>
-	</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>AutoSpotter | Main Page</title>
+      <link rel="icon" type="image/x-icon" href="./favicon.ico">
+      <link rel="stylesheet" href="./css/style.css">
+      <script src="./js/script.js"></script>
+      <script src="https://kit.fontawesome.com/a2c15d1ebf.js" crossorigin="anonymous"></script>
+   </head>
+   <body>
+      <section>
+         </br></br></br></br>
+         <h1>AutoSpotter</h1>
+         <p style="color: #7d7c7e; text-align: center;"></pstyle>Made with <i class="fa-solid fa-heart fa-beat-fade" style="color: #f7647a;"></i> by Alex</p>
+         <a class="addContent" href="addCar.html"><i class="fa-sharp fa-solid fa-plus"></i> Add</a>
+         </br></br></br></br>
+         <div class="tbl-header">
+            <table>
+               <thead>
+                  <tr>
+                     <th>Date</th>
+                     <th>Make</th>
+                     <th>Model</th>
+                     <th>Reg Number</th>
+                     <th>Mot Status</th>
+                     <th>Fuel Type</th>
+                     <th>Year of Manufacture</th>
+                     <th>Colour</th>
+                     <th>User</th>
+                  </tr>
+               </thead>
+            </table>
+         </div>
+         <div class="tbl-content">
+            <table>
+               <tbody>
+                  <tr>
+                     <td>2023-08-11</td>
+                     <td>Toyota</td>
+                     <td>Camry</td>
+                     <td>ABC123</td>
+                     <td>Valid</td>
+                     <td>Petrol</td>
+                     <td>2022</td>
+                     <td>Blue</td>
+                     <td>Alex</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-10</td>
+                     <td>Honda</td>
+                     <td>Accord</td>
+                     <td>XYZ789</td>
+                     <td>Expired</td>
+                     <td>Diesel</td>
+                     <td>2021</td>
+                     <td>Red</td>
+                     <td>James</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-09</td>
+                     <td>Ford</td>
+                     <td>Mustang</td>
+                     <td>DEF456</td>
+                     <td>Valid</td>
+                     <td>Petrol</td>
+                     <td>2023</td>
+                     <td>Black</td>
+                     <td>David</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-08</td>
+                     <td>Chevrolet</td>
+                     <td>Impala</td>
+                     <td>GHI789</td>
+                     <td>Valid</td>
+                     <td>Petrol</td>
+                     <td>2022</td>
+                     <td>Silver</td>
+                     <td>Emily</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-07</td>
+                     <td>BMW</td>
+                     <td>X5</td>
+                     <td>JKL234</td>
+                     <td>Expired</td>
+                     <td>Diesel</td>
+                     <td>2020</td>
+                     <td>White</td>
+                     <td>Michael</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-06</td>
+                     <td>Audi</td>
+                     <td>A4</td>
+                     <td>MNO567</td>
+                     <td>Valid</td>
+                     <td>Gasoline</td>
+                     <td>2023</td>
+                     <td>Gray</td>
+                     <td>Sophia</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-05</td>
+                     <td>Nissan</td>
+                     <td>Maxima</td>
+                     <td>PQR890</td>
+                     <td>Valid</td>
+                     <td>Petrol</td>
+                     <td>2023</td>
+                     <td>Black</td>
+                     <td>William</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-04</td>
+                     <td>Toyota</td>
+                     <td>Rav4</td>
+                     <td>STU123</td>
+                     <td>Expired</td>
+                     <td>Hybrid</td>
+                     <td>2022</td>
+                     <td>Green</td>
+                     <td>Olivia</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-03</td>
+                     <td>Hyundai</td>
+                     <td>Sonata</td>
+                     <td>VWX456</td>
+                     <td>Valid</td>
+                     <td>Petrol</td>
+                     <td>2022</td>
+                     <td>White</td>
+                     <td>Ethan</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-02</td>
+                     <td>Mercedes-Benz</td>
+                     <td>C-Class</td>
+                     <td>YZA789</td>
+                     <td>Expired</td>
+                     <td>Diesel</td>
+                     <td>2021</td>
+                     <td>Blue</td>
+                     <td>Isabella</td>
+                  </tr>
+                  <tr>
+                     <td>2023-08-01</td>
+                     <td>Ford</td>
+                     <td>F-150</td>
+                     <td>BCD234</td>
+                     <td>Valid</td>
+                     <td>Petrol</td>
+                     <td>2023</td>
+                     <td>Red</td>
+                     <td>Noah</td>
+                  </tr>
+               </tbody>
+            </table>
+         </div>
+      </section>
+   </body>
 </html>
