--- a/addCar.html
+++ b/addCar.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Add Car - CruiseCount</title>
-		<link rel="stylesheet" href="./css/addCar.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-	</head>
-	<body>
-		<div id="particles-js"></div>
-		<!-- Particle.js container -->
-		<section class="add-car-section">
-			<h1>Add a Car</h1>
-			<form class="car-form">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Car - AutoSpotter</title>
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./css/addCar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+    <div id="particles-js">
+    <section class="add-car-section">
+        <h1>Add a Car</h1>
+        <form class="car-form">
 				<label for="date">Date:</label>
 				<input type="date" id="date" name="date" required>
 				<label for="make">Make:</label>
@@ -34,7 +34,6 @@
 				<input type="text" id="colour" name="colour" required>
 				<button type="submit"><i class="fas fa-plus"></i> Add Car</button>
 			</form>
-			<p class="made-by">Made with love by Alex</p>
 		</section>
 		<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 		<script src="./js/particles-config.js"></script>
